[project]
name = "testbot01"
version = "0.1.0"
description = "testbot01"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]
